<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.nuxeo</groupId>
  <artifactId>micro-nuxeo-parent</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <name>Micro Nuxeo :: parent</name>
  <description></description>
  <packaging>pom</packaging>

  <modules>
    <module>micro-nuxeo-api</module>
    <module>micro-nuxeo-event</module>
    <module>micro-nuxeo-el</module>
    <module>micro-nuxeo-kv</module>
    <module>micro-nuxeo-core</module>
    <!-- <module>micro-nuxeo-dublincore</module> -->
    <!-- <module>micro-nuxeo-todo</module> -->
    <!-- <module>micro-nuxeo-dsl</module> -->

  </modules>



  <scm>
    <connection>scm:git:git://github.com/dmetzler/micro-nuxeo.git</connection>
    <developerConnection>scm:git:ssh://git@github.com/dmetzler/micro-nuxeo.git</developerConnection>
    <url>https://micro-nuxeo.github.io</url>
    <tag>micro-nuxeo-1.0</tag>
  </scm>

  <properties>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <jersey.version>2.27</jersey.version>
    <jackson.version>2.9.8</jackson.version>
    <aws.sdk.version>[1.11,2.0)</aws.sdk.version>


    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

    <!-- Sonar -->
    <sonar.jacoco.itReportPath>${project.basedir}/../target/jacoco-it.exec</sonar.jacoco.itReportPath>
    <sonar.groovy.binaries>target/classes</sonar.groovy.binaries>
    <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
    <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
    <sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
    <sonar.language>java</sonar.language>

    <!-- gRPC and Protobuf -->
    <grpc.version>1.24.0</grpc.version><!-- CURRENT_GRPC_VERSION -->
    <protobuf.version>3.9.0</protobuf.version>
    <protoc.version>3.9.0</protoc.version>

  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>io.grpc</groupId>
        <artifactId>grpc-bom</artifactId>
        <version>${grpc.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>


      <dependency>
        <groupId>org.nuxeo</groupId>
        <artifactId>micro-nuxeo-api</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>org.nuxeo</groupId>
        <artifactId>micro-nuxeo-el</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>org.nuxeo</groupId>
        <artifactId>micro-nuxeo-core</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>org.nuxeo</groupId>
        <artifactId>micro-nuxeo-event-api</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.nuxeo</groupId>
        <artifactId>micro-nuxeo-kv</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>3.9</version>
      </dependency>
      <dependency>
        <groupId>commons-logging</groupId>
        <artifactId>commons-logging</artifactId>
        <version>1.2</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>1.7.25</version>
      </dependency>
      <dependency>
        <groupId>joda-time</groupId>
        <artifactId>joda-time</artifactId>
        <version>2.10.4</version>
      </dependency>
      <dependency>
        <groupId>io.dropwizard.metrics</groupId>
        <artifactId>metrics-core</artifactId>
        <version>4.0.3</version>
      </dependency>
      <!-- <dependency> <groupId>com.google.guava</groupId> <artifactId>guava</artifactId>
        <version>27.1-jre</version> </dependency> -->
      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>2.6</version>
      </dependency>

      <dependency>
        <groupId>org.mongodb</groupId>
        <artifactId>mongo-java-driver</artifactId>
        <version>3.8.1</version>
      </dependency>

      <dependency>
        <groupId>javax.resource</groupId>
        <artifactId>connector-api</artifactId>
        <version>1.5</version>
      </dependency>
      <dependency>
        <groupId>javax.transaction</groupId>
        <artifactId>jta</artifactId>
        <version>1.1</version>
      </dependency>
      <dependency>
        <groupId>cup</groupId>
        <artifactId>java-cup</artifactId>
        <version>0.11a</version>
      </dependency>

      <dependency>
        <groupId>org.apache.httpcomponents</groupId>
        <artifactId>httpcore</artifactId>
        <version>4.4.10</version>
      </dependency>


      <dependency>
        <groupId>commons-beanutils</groupId>
        <artifactId>commons-beanutils</artifactId>
        <version>1.9.3</version>
      </dependency>
      <dependency>
        <groupId>javax.resource</groupId>
        <artifactId>connector-api</artifactId>
        <version>1.5</version>
      </dependency>
      <dependency>
        <groupId>org.apache.geronimo.components</groupId>
        <artifactId>geronimo-connector</artifactId>
        <version>2.2.1-NX1</version>
        <exclusions>
          <exclusion>
            <groupId>org.apache.geronimo.specs</groupId>
            <artifactId>geronimo-j2ee-connector_1.5_spec</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
      <dependency>
        <groupId>org.tranql</groupId>
        <artifactId>tranql-connector</artifactId>
        <version>1.8</version>
      </dependency>
      <dependency>
        <groupId>org.apache.geronimo.components</groupId>
        <artifactId>geronimo-transaction</artifactId>
        <version>2.2.1</version>
        <exclusions>
          <exclusion>
            <groupId>org.apache.geronimo.specs</groupId>
            <artifactId>geronimo-jta_1.1_spec</artifactId>
          </exclusion>
          <exclusion>
            <groupId>org.apache.geronimo.specs</groupId>
            <artifactId>geronimo-j2ee-connector_1.5_spec</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
      <dependency>
        <groupId>javax.transaction</groupId>
        <artifactId>javax.transaction-api</artifactId>
        <version>1.3</version>
      </dependency>
      <dependency>
        <groupId>org.apache.xbean</groupId>
        <artifactId>xbean-naming</artifactId>
        <version>3.18</version>
      </dependency>
      <!-- <dependency> <groupId>io.dropwizard.metrics</groupId> <artifactId>metrics-core</artifactId>
        </dependency> -->
      <dependency>
        <groupId>javax.servlet</groupId>
        <artifactId>javax.servlet-api</artifactId>
        <version>4.0.1</version>
      </dependency>
      <dependency>
        <groupId>org.nuxeo.common</groupId>
        <artifactId>nuxeo-common</artifactId>
        <version>10.10</version>
      </dependency>

      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava</artifactId>
        <version>26.0-jre</version>
      </dependency>

      <dependency>
        <!-- this implements a more recent version of the EL spec than javax.el:el-api:1.0 -->
        <groupId>org.apache.tomcat</groupId>
        <artifactId>tomcat-el-api</artifactId>
        <version>9.0.20</version>
      </dependency>

      <dependency>
        <groupId>org.jboss.el</groupId>
        <artifactId>jboss-el</artifactId>
        <version>1.0_02.CR6</version>
        <exclusions>
          <!-- use org.apache.tomcat:tomcat-el-api instead -->
          <exclusion>
            <groupId>javax.el</groupId>
            <artifactId>el-api</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
      <dependency>
        <!-- this implements a more recent version of the EL spec than javax.el:el-api:1.0 -->
        <groupId>org.apache.tomcat</groupId>
        <artifactId>tomcat-el-api</artifactId>
        <version>9.0.20</version>
        <scope>provided</scope> <!-- provided by Tomcat as jasper.jar -->
      </dependency>

      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>4.12</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-core</artifactId>
        <version>2.25.1</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.assertj</groupId>
        <artifactId>assertj-core</artifactId>
        <version>3.8.0</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>commons-codec</groupId>
        <artifactId>commons-codec</artifactId>
        <version>1.11</version>
      </dependency>

      <dependency>
        <groupId>net.jodah</groupId>
        <artifactId>expiringmap</artifactId>
        <version>0.5.9</version>
      </dependency>

      <dependency>
        <groupId>com.sun.xsom</groupId>
        <artifactId>xsom</artifactId>
        <version>20140925</version>
      </dependency>

    </dependencies>
  </dependencyManagement>
</project>
